remove unneeded fields

--- a/web/views/mainView.html
+++ b/web/views/mainView.html
@@ -13,23 +13,8 @@
 <form class="form">
   <ul class="form-list">
     <li>
-      <label for="name">Nome*:</label>
-      <input type="text" ng-model="name" name="name" id="name" ng-class="{ error: mapErrors.name }" />
-    </li>
-
-    <li>
-      <label for="email">E-mail*:</label>
-      <input type="email" ng-model="email" name="email" id="email" ng-class="{ error: mapErrors.email }" />
-    </li>
-
-    <li>
-      <label for="tel">Celular*:</label>
-      <input type="text" ng-model="tel" name="tel" id="tel" ng-class="{ error: mapErrors.tel }" />
-    </li>
-
-    <li>
       <label for="usuario">Usuário*:</label>
-      <input type="text" ng-model="usuario" name="usuario" id="usuario" ng-class="{ error: mapErrors.usuario }" />
+      <input type="text" ng-model="username" name="username" id="username" ng-class="{ error: mapErrors.username }" />
     </li>
 
     <li>
@@ -38,8 +23,8 @@
     </li>
 
     <li>
-      <label for="token">Token*:</label>
-      <input type="text" ng-model="token" name="token" id="token" ng-class="{ error: mapErrors.token }" />
+      <label for="token">Service*:</label>
+      <input type="text" ng-model="service" name="service" id="service" ng-class="{ error: mapErrors.service }" />
     </li>
 
     <li>
